# sail-music

./: .clang-format  .gitmodules  CMakeLists.txt  FEATURES.txt  README.txt  sail-music.desktop
.cache/clangd/index/: Album.cpp.A212714F79BEDDA2.idx  Album.h.0E459FD8949374EF.idx  ApiRequest.cpp.41E9397367729AA9.idx  ApiRequest.h.CFCF233A8396642E.idx  Artist.cpp.5BC4BF26BF25DF87.idx  Artist.h.9866FB8A639A3AF6.idx  Cache.cpp.A19366C50158469F.idx  Cache.h.8AB3CD953867A929.idx  Core.cpp.C25E9AE523385BDD.idx  Core.h.FEDAAFCC56A49E06.idx  PlayListModel.cpp.469196A11477CAF2.idx  PlayListModel.h.2B177862CC20B88E.idx  Playlist.cpp.20C5B3BA556C8CD5.idx  Playlist.h.6C507428D4B64493.idx  RadioListModel.cpp.496547CAA0B1817E.idx  RadioListModel.h.FA2323D845742117.idx  Settings.cpp.43506461382C87F3.idx  Settings.h.51AD931A79DF7F1A.idx  Track.cpp.FCF38B56A46EDD1D.idx  Track.h.8564145024C6EB4B.idx  YaClient.cpp.6C85CAC000F223A2.idx  YaClient.h.F5F2861C4F17ACB0.idx  allocators.h.1D6C3C6662ABF417.idx  biginteger.h.96C9D8A38E337CD9.idx  commons.cpp.C839E85F65256C13.idx  commons.h.E533178D40F75BED.idx  diyfp.h.311C8AA1B116E44B.idx  document.h.34ACCD171420017E.idx  dtoa.h.0359A283DE0A0ECE.idx  en.h.9E7A95611783F609.idx  encodedstream.h.7DF24604C813C6EF.idx  encodings.h.55CD37D25FCF6FA9.idx  error.h.BC835E9DC219166D.idx  ieee754.h.2786A4AE3C6D60C6.idx  istreamwrapper.h.E4D59C8281DE1046.idx  itoa.h.7293A5DFAFD24345.idx  memorystream.h.E939B2032697E061.idx  meta.h.8A7B5003A057CE8A.idx  ostreamwrapper.h.00610BDAC66C86EA.idx  pow10.h.0D74D1A74F1143B9.idx  (+12 more)
qml/: sail-music.qml
qml/Playlist/: Playlist.qml  TrackDelegate.qml
qml/Radio/: RadioAlbum.qml  RadioList.qml
qml/components/: AlbumElement.qml  MediaButton.qml  PlaylistList.qml  PlaylistTrackView.qml  PlaylistTracks.qml  RadioAlbum.qml  RadioList.qml
qml/pages/: FirstPage.qml  LoginPage.qml  MainPage.qml  PlaylistPage.qml  SelectPlaylistPage.qml  TrackPage.qml
rpm/: sail-music.changes.in  sail-music.changes.run.in  sail-music.spec  sail-music.yaml
src/: Core.cpp  Core.h  YaClient.cpp  YaClient.h  sail-music.cpp  settings.cpp  settings.h
src/Adapters/: AlbumAdapter.cpp  AlbumAdapter.h  TrackAdapter.cpp  TrackAdapter.h  YaClientAdapter.cpp  YaClientAdapter.h
src/Models/: AlbumModel.cpp  AlbumModel.h  ArtistModel.cpp  ArtistModel.h  PlayListModel.cpp  PlayListModel.h  TrackModel.cpp  TrackModel.h  YaClientModel.cpp  YaClientModel.h
src/Radio/: RadioAdapter.cpp  RadioAdapter.h  RadioListModel.cpp  RadioListModel.cpp.autosave  RadioListModel.h  RadioService.cpp  RadioService.h
src/Services/: PlaylistService.cpp  PlaylistService.h  TrackService.cpp  TrackService.h  YaClientService.cpp  YaClientService.h
src/Utils/: ApiRequest.cpp  ApiRequest.h  Cache.cpp  Cache.h  Core.cpp  Core.h  Settings.cpp  Settings.h  commons.cpp  commons.h
src/models/: PlayListModel.cpp  PlayListModel.h  RadioListModel.cpp  RadioListModel.h
src/units/: Artist.cpp  Artist.h  Playlist.cpp  Playlist.h  Track.cpp  Track.h  YaClient.cpp  YaClient.h
src/utils/: ApiRequest.cpp  ApiRequest.h  commons.cpp
